client/src/App.css
/* ... */
.gridCard {
    background-color:rgb(128, 128, 128, 0.2);
    display: flex;
    align-items: center;
    border-radius: 5px;
    transition: background-color 0.2s ease-in-out;
    
}

.gridCardLink {
    margin-right: 23px;
    min-width: 250px; 
    flex: 0 1 calc(25% - 25px)
}

.gridCard:hover .gridPlayButton {
    opacity: 1 !important;
}

.gridPlayButton {
    display: flex;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    background: #1ed760;
    box-shadow: 0px 5px 6px 2px rgba(0, 0, 0, 0.4);
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}

.gridPlayButton:hover {
    transform: scale(1.05)
}

.gridCard:hover {
    background-color: rgba(128, 128, 128, 0.7)
}


.gridCardImage {
    background-color: white;
    width: 5.55vw;
    height: 5.55vw;
    min-height: 80px;
    min-width: 80px;
    float: left;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.gridCardTitle {
    font-family: Verdana, sans-serif;
    color: white;
    width: 45%;
    float: right;
    margin-left: 10px;
    font-size: 10pt;
    overflow: hidden; 
    text-overflow: ellipsis; 
    white-space: normal; 
    display: -webkit-box !important;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}


/* SIDEBAR COMPONENT */

.sideBarList::-webkit-scrollbar {
    width: 20px;
  }
  
.sideBarList::-webkit-scrollbar-thumb {
    border-radius: 15px;
    background-color: rgba(128, 128, 128, 0.5);
    background-clip: padding-box;
    border: 5px solid rgba(0, 0, 0, 0);    
}

.sideBarList::-webkit-scrollbar-thumb:hover {
    background-color: rgba(128, 128, 128, 1);
}

.sideBar {
    background: black;
    cursor: pointer;
    z-index: 2;
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 98%;
}

.sideBarLink {
    text-decoration: none;
    color: rgb(168, 168, 168);
    height: 2.5rem;
    display: flex;
    align-items: center;
}

.sideBarActive {
    background-color: rgb(40, 40, 40);
    width: 98%;
    text-decoration: none;
    color: white !important;
    border-radius: 0.25rem;
}

.sideBarPlaylistActive {
    text-decoration: none;
    color: white !important;
}


.sideBarIcon {
    transition: color 0.2s ease-in-out;
    margin-left: 1rem;
}

.sideBarImg {
    width: 25px;
    height: 25px;
    margin-left: 1rem;
    border-radius: 0.2rem;
    opacity: 0.6;
    transition: opacity 0.2s ease-in-out;
}

.sideBarText {
    font-size: 0.9rem;
    margin-left: 1.2rem;
    transition: color 0.2s ease-in-out;
}

li:hover .sideBarText {
    color: white;
}

li:hover .sideBarIcon {
    color: white;
}

li:hover .sideBarPlaylist {
    color: white !important;
}

li:hover .sideBarImg {
    opacity: 1;
}

.sideBarPlaylist {
    color: rgb(168, 168, 168);
    text-decoration: none;
    font-size: 0.85rem;
    margin-left: 1rem;
    display: block;
    height: 2rem;
    overflow: hidden; 
    text-overflow: ellipsis; 
    white-space: nowrap;
}


.sideBarList {
    list-style-type: none;
    padding-left: 0;
    margin-left: 0.5rem;
    font-family: Arial, sans-serif;
    margin-bottom: 0;
    margin-top: 0;
    max-height: 35%;
}

.sideBarDivider {
    width: 80%; 
    border: none;
    background-color: rgb(40, 40, 40);
    height: 0.5px;
    margin-left: 1.5rem; 
    margin-bottom: 1.5rem; 
    margin-top: 1.5rem;
}


/* TRACK TABLE COMPONENT */

#tableTop {
    position: sticky;
    top: 7.5vh;
    z-index: 1;
}

#tableHeader {
    width: 100%;
    height: 1px;
    background-color: transparent;
}

th {
    color: rgb(168, 168, 168);
    text-align: left;
    font-family: Arial, sans-serif;
    font-size: 9pt;
    font-weight: normal;
    letter-spacing: 1px;
    border-bottom: 1px solid rgb(105, 105, 105, 0.3);
    padding-top: 15px;
    padding-bottom: 10px;
}

.trackHead {
    text-align: center;
}

.trackFunctions {
    width: 10%;
    min-width: 120px;
}

.trackRow {
    color: rgb(168, 168, 168);
    height: 60px;
}

.trackRow:hover .trackIndex {
    visibility: hidden;
}

.trackRow:hover .trackTablePlayIcon {
    visibility: visible;
}

.trackRow:hover .trackTableLike {
    stroke: rgb(168, 168, 168);
}

.trackRow:hover .trackOptions {
    visibility: visible;
}

.trackRow:hover {
    color: white;
    background: rgb(53, 53, 53);
}

.trackRow:hover .addTrack {
    border-color: white;
}

.trackRow:hover .searchTableTrackPlayIcon {
    visibility: visible;
}

.trackRow:hover .searchTableTrackImage {
    opacity: 0.5;
}

.empty {
    border-bottom: none;
}

.emptyCell {
    width: 2.5vw;
    min-width: 36px;
    pointer-events: none;
    visibility: hidden;
}

.firstCell {
    position: relative;
    width: 3.47vw;
    min-width: 50px;
    font-size: 12pt;
    text-align: center;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.lastCell {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

.trackImage {
    height: 40px; 
    width: 40px; 
    object-fit: cover;
    margin-right: 15px;
}

.trackName {
    color: white;
    margin-bottom: 0px;
    margin-top: 0px;  
    text-overflow: ellipsis; 
    overflow: hidden; 
    white-space: nowrap;
}

.trackText {
    overflow: hidden; 
    text-overflow: ellipsis; 
    white-space: nowrap;
    padding-right: 1rem;
}

.trackCell {
    max-width: 300px;
}

.trackDetails {
    display: flex;
    align-items: center;
}

.trackLink {
    font-size: 10pt;
}

.trackLink:hover {
    color: white;
    text-decoration: underline;
}

.trackOptionsFlex {
    display: flex;
    margin: auto;
    align-items: center;
    justify-content: space-around;
}

.trackTableLike:hover {
    stroke: white !important;
}

